[package]
name = "solend-interface"
version = "2.0.2"
description = "Solend"
license = "Apache-2.0"
edition = "2018"

[dependencies]
arrayref = "0.3.6"
num-derive = "0.3"
num-traits = "0.2"
solana-program = "1.16.23"
spl-token = { version = "3.2.0", features=["no-entrypoint"] }
thiserror = "1.0"
uint = "0.9.1"